pxc/tests/test_042_numeric/intconst2.px
public namespace intconst2;
import core::common -;
import core::io::file -;

function void test1()
{
  int v = 12;
  off_t z = off_t(v); // error
  println(z);
}

test1();

